Debugging feature implementation